--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ change_theme: true
 
 <div class="row task-list" id="row1">
 
-  <div class="tasks important" style="background-color: rgb(0, 5, 75);">
+  <div class="tasks important" style="background-color: rgb(0, 5, 75); color: white;">
     <h4> <b>The first Online Test is live now !</b> <button type="button" class="btn btn-primary" id="id">Online Test</button></h4>
     <p style="width: 80%;">
       There are 4 online tests for BITS participants. You can participate in these tests and score a high number of points.
