--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ change_theme: true
 
       <a class="btn btn-info" href="https://drive.google.com/file/d/1i439a9PV5CInM7T05lYQK94rZZwdl39A/view?usp=sharing" id="catocery">More
         Information</a>
-        <a class="btn btn-success" onclick="alertmeeting()">Go to Meeting</a>
+        <a class="btn btn-success" href="https://us02web.zoom.us/j/84638813801">Go to Meeting</a>
       <button type="button" class="btn btn-primary" id="catocery">Code & Design</button>
     </div>
   
