--- a/about.html
+++ b/about.html
@@ -44,6 +44,18 @@ change_theme: true
       </div>
       <h6>PROJECT SUB-COORDINATOR</h6>
     </li>
+<li class="flex-item">
+      <div class="container1">
+        <img src="static/images/nithika.jpg" alt="Avatar" class="image">
+        <div class="overlay"> <p>Nithika Senaweera</p> 
+          <ul class="pros">
+             <li>Progressive Web Application developer</li>
+              <li>Backend developer</li>
+              <li>UI/UX Designer</li>
+          </ul></div>
+      </div>
+      <h6>PROJECT SUB-COORDINATOR</h6>
+    </li>
 
     <li class="flex-item">
       <div class="container1">
