Comment out webinar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ change_theme: true
 
 <div class="row task-list" id="row1">
 
-  <div class="tasks important"> 
+  <!--<div class="tasks important"> 
     <h4><b>IMPORTANT</b></h4>
     <h4>HTML, CSS and JavaScript Coding Webinar - 02<button type="button" class="btn btn-primary" id="id">Task ID: CD02</button></h4>
     <p>A 2 hour coding session on the 22nd of June [Monday]
@@ -26,7 +26,7 @@ change_theme: true
     </div>
   
   
-</div>
+</div>-->
 
   {% for task in site.data.tasks %}
   <div class="tasks task-cat {{task.category}}">
