--- a/webinar.html
+++ b/webinar.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: TASKS
+title: WEBINAR
 css: static/CSS/tasks.css
 js: static/JS/tasks.js
 change_theme: true
@@ -8,7 +8,7 @@ change_theme: true
 <div class="row task-list" id="row1" style="height: 100%;">
 <div class="tasks important"> 
     <h4><b>IMPORTANT</b></h4>
-    <h4>HTML, CSS and JavaScript Coding Webinar - 03<button type="button" class="btn btn-primary" id="id">Task ID: CD02</button></h4>
+    <h4>HTML, CSS and JavaScript Coding Webinar - 03<button type="button" class="btn btn-primary" id="id">Task ID: CD03</button></h4>
     <p>A 2 hour coding session on the 29th of June [Monday]
       from 6.00 pm to 8.00 pm, for all BITS Paticipants
       on HTML, CSS and JavaScript. All who participate can
