--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ change_theme: true
 
 <div class="row task-list" id="row1">
   <div class="tasks important" id="explain"> 
-    <h4><b>BITS20 competition has been ended and you can't no longer submit tasks. WINNERS WILL BE ANNOUNCED WITHIN A WEEK. Stay exited !</b></h4>
+    <h4><b>BITS 2020 competition has come to an end and you can no longer submit tasks. <br> WINNERS WILL BE ANNOUNCED WITHIN A WEEK. Stay excited!!!</b></h4>
     
     </div>
 {% for Atask in site.data.Atasks %}
