--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@ change_theme: true
 
 <div class="row task-list" id="row1">
   <div class="tasks important" id="explain"> 
-    <h4><b>BITS 2020 competition has come to an end and you can no longer submit tasks. <br> WINNERS WILL BE ANNOUNCED WITHIN A WEEK. Stay excited!!!</b></h4>
+    <h4><b>Winners of BITS 2020 has been announced in the LeaderBoard page !</b><br> <br>
+    We are exited to announce the Winners of BITS 2020.
+    We want to congratulate all of the Anandians who took part in this year’s BITS competition. Great job!</h4>
     
     </div>
 {% for Atask in site.data.Atasks %}
