--- a/leaderboard.html
+++ b/leaderboard.html
@@ -5,16 +5,33 @@ css: static/CSS/leaderboard.css
 js: static/JS/leaderboard.js
 change_theme: true
 ---
- 
+
+<ul class="social">
+
+  <li class="chat"><a<div class="stars"><i class="fas fa-star"></i> <i class="fas fa-star"></i> <span><i class="fas fa-star"></i></span></div> </a> 
+  <h4> <b>Thusal Ranawaka</b> </h4>
+  <h6>Winner</h6> </li>
+
+  <li class="chat"><a<div class="stars"><i class="fas fa-star"></i> <span><i class="fas fa-star"></i></span></div></a> 
+      <h4> <b>Inuka Batawala</b> </h4>
+      <h6>1st Runner Up</h6></li>
+
+  <li class="chat"><a<div class="stars"><i class="fas fa-star"></i> </div></a> 
+      <h4> <b>Pasindu Yahampath</b> </h4>
+      <h6>2nd Runner Up</h6></li>
+
+</ul>
+
 <div class="button">
-  <a class="btn btn-info" href="https://drive.google.com/file/d/1qA6EgkzJJEm0lqAH5kJv04zgZZifkarK/view?usp=sharing" target="_blank" id="catocery">Leaderboard SpreadSheet</a>
+  <a class="btn btn-info" href="https://drive.google.com/file/d/1Efu1SE7nFOv5EfrL0uZggEZp9JzRfAze/view" target="_blank" id="catocery">Leaderboard SpreadSheet</a>
 </div>
 
   <table>
     <tr>
-      <th></th>
+      <th>Rank </th>
       <th>Name</th>
       <th>Class</th>
+      <th>No. Of Tasks Accepted</th>
       <th>Points</th>
     </tr>
     {% for person in site.data.leaderboard %}
@@ -22,7 +39,120 @@ change_theme: true
       <td>{{person.index}}</td>
       <td>{{person.name}}</td>
       <td>{{person.class}}</td>
+      <td>{{person.tasks}}</td>
       <td>{{person.marks}}</td>
     </tr>
     {% endfor %}
+  </table>
+
+  <table>
+    <tr>
+      <th>Online Test</th>
+      <th>Winner</th>
+      <th>Class</th>
+    </tr>
+<!--online test 1-->
+    <tr>
+      <td>First Online Test (G 6-8)	</td>
+      <td>Lithira Mendis</td>
+      <td>08-09</td>
+    </tr>
+
+
+    <tr>
+      <td>First Online Test (G 9-11)	</td>
+      <td>Pasindu Yahampath </td>
+      <td>11-04</td>
+    </tr>
+
+    <tr>
+      <td></td>
+      <td>Thulana Vithanage</td>
+      <td>09-02</td>
+    </tr>
+<!--online test 2-->
+    <tr>
+      <td>Second Online Test (G 6-8)	</td>
+      <td>Senura Ratnayake</td>
+      <td>08-11</td>
+    </tr>
+
+    <tr>
+      <td></td>
+      <td>Lithika Methsilu</td>
+      <td>08-04</td>
+    </tr>
+
+    <tr>
+      <td>Second Online Test (G 9-11)	</td>
+      <td>Thusal Ranawaka</td>
+      <td>09-11</td>
+    </tr>
+
+    <tr>
+      <td></td>
+      <td>Inuka Batawala</td>
+      <td>09-02</td>
+    </tr>
+
+    <tr>
+      <td></td>
+      <td>Thulina Perera</td>
+      <td>11-05</td>
+    </tr>
+
+    <tr>
+      <td></td>
+      <td>Nethula Peiris</td>
+      <td>09-08</td>
+    </tr>
+<!--online test 3-->
+    <tr>
+      <td>Third Online Test (G 6-8)	</td>
+      <td>Tharusha Aloka</td>
+      <td>08-01</td>
+    </tr>
+
+    <tr>
+      <td>Third Online Test (G 9-11)	</td>
+      <td>Nethula Peiris</td>
+      <td>09-08</td>
+    </tr>
+<!--online test 4-->
+    <tr>
+      <td>Final Test (G 6-8) </td>
+      <td>Senura Ratnayake</td>
+      <td>08-11</td>
+    </tr>
+
+    <tr>
+      <td> </td>
+      <td>Lithira Mendis</td>
+      <td>08-09</td>
+    </tr>
+
+    <tr>
+      <td></td>
+      <td>Lithika Methsilu</td>
+      <td>08-04</td>
+    </tr>
+
+    <tr>
+      <td>Final Test (G 9-11)</td>
+      <td>Nethula Peiris</td>
+      <td>09-08</td>
+    </tr>
+
+    <tr>
+      <td></td>
+      <td>Sasvidu Ranthul</td>
+      <td>09-01</td>
+    </tr>
+
+    <tr>
+      <td></td>
+      <td>Pasindu Dushan</td>
+      <td>10-07</td>
+    </tr>
+
   </table>
