--- a/leaderboard.html
+++ b/leaderboard.html
@@ -23,7 +23,7 @@ change_theme: true
 </ul>
 
 <div class="button">
-  <a class="btn btn-info" href="https://drive.google.com/file/d/1Efu1SE7nFOv5EfrL0uZggEZp9JzRfAze/view" target="_blank" id="catocery">Leaderboard SpreadSheet</a>
+  <a class="btn btn-info" href="https://drive.google.com/file/d/1Co7u_LKoBN43nwunLnTRjB6WRCfSTswB/view?usp=sharing" target="_blank" id="catocery">Leaderboard SpreadSheet</a>
 </div>
 
   <table>
