--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@ change_theme: true
 
 <div class="row task-list" id="row1">
   <div class="tasks important" id="explain"> 
-    <h4><b>Winners of BITS 2020 has been announced in the LeaderBoard page !</b><br> <br>After competing for over a month, 
-    We are excited to announce the Winners of BITS 2020.
-    We want to congratulate all of the Anandians who took part in this year’s BITS competition. Great job!</h4>
-    
-    </div>
+    <h4><b>Winners of BITS 2020 have been announced in the Leaderboard page!</b><br> <br>After an intense competition that extended over a month, we are excited to announce the winners of BITS 2020. We want to congratulate all of the Anandians who took part in this year’s BITS competition. Great job!</h4>
+  </div>
 {% for Atask in site.data.Atasks %}
 
 <div class="tasks important" id="atask"> 
