--- a/onlinetest.html
+++ b/onlinetest.html
@@ -13,7 +13,7 @@ change_theme: true
     <p> <span style="font-weight: bold;">Date :</span> {{test.date}}</p>
     <p> <span style="font-weight: bold;">Time :</span> {{test.time}}</p>
     <div class="buttons">
-      <a class="btn btn-success" href="{{test.URL}}" target="_blank" id="catocery">VISIT TEST</a>
+      <a class="btn btn-success" href="{{test.URL}}" id="catocery">VISIT TEST</a>
          
     </div>
   </div>
