--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@ change_theme: true
 
     <li class="flex-item">
       <div class="container1">
-        <img src="static/images/manula.png" alt="Avatar" class="image">
+        <img src="static/images/Manula.jpg" alt="Avatar" class="image">
         <div class="overlay">
           <p>Manula Thejan</p>
           <ul class="pros">
